...
    <string name="account_logout">Logout</string>
    <string name="settings_item_text">Settings</string>

    <!-- Navigation drawer alert messages: -->

    <!-- Strings used by multiple activities/dialogs -->
    <string name="dialog_ok_text">OK</string>
    <string name="dialog_no_text">No</string>
    <string name="dialog_yes_text">Yes</string>
    <string name="dialog_cancel_text">Cancel</string>

    <string name="dialog_btn_delete">Delete</string>
    <string name="dialog_btn_crop">Crop</string>
    <string name="dialog_btn_upload">Upload</string>
    <string name="dialog_btn_upload_again">Upload again</string>
    <string name="dialog_btn_cancel_upload">Cancel upload</string>
...
    <string name="intro_text_3">Start the automatic mode in the app</string>
    <string name="intro_text_7">The text orientation can be changed in the settings</string>
    <string name="intro_text_4">Flip pages - images are captured automatically.\n</string>
    <string name="intro_text_5">Your scanned images are grouped into documents.\nDocuments can be exported as PDF and uploaded.</string>
    <string name="intro_trigger_flash_text">Trigger flash after automatic imaging to show that an image has been taken.</string>
    <string name="intro_create_document_button_text">Create a document now</string>
    <string name="intro_skip_button_text">Skip</string>


    <string name="edit_series_title">Edit document</string>
    <string name="edit_series_done_button_text">Save changes</string>

    <string name="create_series_title">Create new document</string>
...
