<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:fitsSystemWindows="true">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_layout"
        android:layout_centerInParent="true"
        android:paddingTop="32dp" />

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/activity_horizontal_margin">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabDots"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            app:tabBackground="@drawable/tab_selector"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/intro_skip_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tabDots"
            android:layout_centerHorizontal="true"
            android:text="@string/intro_skip_button_text"
            android:textColor="@color/white"
            app:backgroundTint="@color/colorAccent" />

    </RelativeLayout>
</RelativeLayout>